# wwscore

./: README.md  config.js  index.html  ocr-config.json  ocr-config.json.example  pyproject.toml  requirements.txt  script.js  server.py  style.css
character/default/: calc.json
character/丹瑾/: calc.json
character/今汐/: calc.json
character/凌阳/: calc.json
character/卡卡罗/: calc.json
character/卡提希娅/: calc.json
character/吟霖/: calc.json
character/坎特蕾拉/: calc.json
character/夏空/: calc.json
character/守岸人/: calc.json
character/安可/: calc.json
character/布兰特/: calc.json
character/弗洛洛/: calc.json
character/忌炎/: calc.json
character/折枝/: calc.json
character/散华/: calc.json
character/桃祈/: calc.json
character/椿/: calc.json
character/洛可可/: calc.json
character/测试/: calc.json
character/渊武/: calc.json
character/漂泊者·气动/: calc.json
character/漂泊者·湮灭/: calc.json
character/漂泊者·衍射/: calc.json
character/灯灯/: calc.json
character/炽霞/: calc.json
character/珂莱塔/: calc.json
character/白芷/: calc.json
character/相里要/: calc.json
character/秋水/: calc.json
character/秧秧/: calc.json
character/维里奈/: calc.json
character/莫特斐/: calc.json
character/菲比/: calc-新光套.json  calc.json
character/赞妮/: calc.json
character/釉瑚/: calc.json
character/鉴心/: calc.json
character/长离/: calc.json
character/露帕/: calc.json
